# sophie-pipeline

./: .gitignore  README.md  pyproject.toml
investment-clock/: README.md  generate_prompt.py  recalc_history.py  run.py
investment-clock/prompts/: 2026-04-04.md  2026-04-10.md  2026-04-17.md  2026-04-24.md  2026-05-01.md  2026-05-08.md  2026-06-07.md  2026-06-12.md  2026-06-19.md  2026-06-26.md  2026-07-03.md  2026-07-10.md  2026-07-17.md  Result-2026-04-04.md  Result-2026-04-10.md  Result-2026-04-17.md  Result-2026-04-24.md  Result-2026-05-01.md  Result-2026-05-08.md  Result-2026-06-07.md  Result-2026-06-12.md  Result-2026-06-19.md  Result-2026-06-26.md  Result-2026-07-03.md  Result-2026-07-10.md  Result-2026-07-17.md
quant-trending/: run.py
sql/: alter_investment_clock_v2.sql  alter_investment_clock_v3.sql  create_ai_analysis_table.sql  create_company_facts_table.sql  create_company_news_alphavantage_table.sql  create_company_news_table.sql  create_financial_metrics_table.sql  create_fundamentals_table.sql  create_insider_trades_table.sql  create_investment_clock_tables.sql  create_line_items_table.sql  create_prices_table.sql  create_quant_trending_tables.sql  create_sentiment_table.sql  create_sophie_analysis_table.sql  create_technicals_table.sql  create_valuation_table.sql
src/: __init__.py  run_uploads_tickers.py  run_uploads_tickers_free.py
src/agents/: ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  investment_clock.py  (+10 more)
test/: run_tests.py  test_api.py  test_cache.py  test_integration.py  test_models.py  test_utils.py
(+37 files in other folders)
